# kuka_ds_gm

./: .~lock.all_sensor_inone.odt#  README.md  README.md~  SEDS_GMM_debug.odt  WRGMMGMRModel_3d2.txt  WRGMMGMRModel_3d4.txt  WRSEDSModel3.txt  WRSEDSModel_3d1.txt  all_sensor_inone.odt  mathlab_code.odt  pt_sj1.bag  pt_sj3.bag  pt_sj614.bag
actionlib_tutorials/: CMakeLists.txt  package.xml
data_under_workspace/: README.md  WRGMMGMRModel2.txt  WRSEDSModel1.txt  WRSEDSModel_3d3.txt  WRSEDSModel_3d5.txt  pt_sj4.bag  pt_sj5.bag  pt_sj615.bag  pt_sj6151.bag
iiwa_moveit_config_by_Wr/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_moveit_config_by_Wr/config/: iiwa14.srdf  ompl_planning.yaml
iiwa_moveit_config_by_Wr/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
iiwa_stack-master-Sunrise1.9/iiwa_gazebo/launch/: Default_position_of_robot.perspective  Default_position_of_robot_1.perspective  Default_position_of_robot_2.perspective  GMMbeginpoint.perspective  iiwa_gazebo.launch  wr_switch_experiment
iiwa_stack-master-Sunrise1.9/iiwa_moveit/config/: joint_names.yaml
iiwa_stack-master-Sunrise1.9/iiwa_msgs/: CMakeLists.txt
iiwa_stack-master-Sunrise1.9/iiwa_msgs/msg/: ForceAndPosition.msg
iiwa_stack-master-Sunrise1.9/iiwa_ros/: CMakeLists.txt  package.xml
iiwa_stack-master-Sunrise1.9/iiwa_ros/include/: Myadd.h  iiwaRos.h
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/: Pinv_svd.cpp  WR_BACKUP_CMakeLists.txt  iiwaRos.cpp  pt_admittance1.cpp  pt_experiment_start.cpp  pt_go2.cpp  pt_joint.cpp  pt_joint1.cpp  pt_listener.cpp  pt_recircle.cpp
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/DSmodel/: WRGMMGMRModel2.txt  WRSEDSModel1.txt  WRSEDSModel3.txt
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/SEDS_GMM/: Cartesian_velocity_to_joint_velocity.cpp  README.md  backup_readGMM.cpp  csdn_pinv.cpp  plot_position_and_stiffness.perspective  pt_sj_go_SEDS.cpp  pt_sj_go_change.cpp  readGMM.cpp  readGMM1.cpp  svd_pinv.cpp  wr_SEDS_GMM.cpp  wr_SEDS_GMM_20180319backup_good_for_position_impedance_stuck.cpp  wr_SEDS_GMM_backup_2019_4_1.cpp  wr_SEDS_GMM_only_position.cpp
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/old_pt/: Myadd.cpp  NDI.txt  example.cpp  listenerRobot_Cartesianimpedancecontrol-ot.cpp  listenerRtoP.cpp  pt_client.cpp  pt_go.cpp  pt_go1.cpp  pt_impedance.cpp  pt_record_F.cpp  pt_record_X.cpp  pt_sj_go.cpp  pt_start.cpp  pt_zq.cpp  read.cpp  read_save_X.cpp
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/qq/: listenerRobot_Cartesianimpedancecontrol_3D_18.6.21_ATI.cpp  listenerRobot_Cartesianimpedancecontrol_3D_2.5.cpp  listenerRobot_Cartesianimpedancecontrol_3D_2.5_xyz.cpp  listenerRobot_Cartesianimpedancecontrol_3D_2.5_xyz_fast.cpp  listenerRobot_Cartesianimpedancecontrol_3D_2.5_xyz_fast_lvbo.cpp  pt_admittance.cpp  pt_admittance_add_force.cpp  pt_admittance_add_force_2d.cpp  pt_zq1.cpp  pt_zq1_2d.cpp  命令和记录
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/simulate_in_gazebo/: joint_position_for_gazebo.cpp  pt_sj_go_SEDS_for_gazebo.cpp
iiwa_stack-master-Sunrise1.9/iiwa_ros/src/topic_synchronizer/: get_all_sensor_in_one.cpp  get_all_sensor_in_one_ApproximateTime.cpp  get_all_sensor_in_one_ApproximateTime_publisher.cpp  get_all_sensor_in_one_Synchronizer.cpp  get_all_sensor_in_one_separite_txt.cpp
mathlib/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ndi_calibrate/: MinTwoSolveTJM.m  calibrate.py
ndi_calibrate/NDI_from_windows/: Dx.txt  Dy.txt  Dz.txt  NDI.txt  NDIS.txt  NDIwr.txt  Rx.txt  Ry.txt  Rz.txt  TCP.txt  TJM.txt  TOB.txt
ndi_data_speaker/: CMakeLists.txt  package.xml
polaris_sensor/include/polaris_sensor/: polaris_sensor.h
polaris_sensor/src/: polaris_ros.cpp  polaris_sensor.cpp
seds/: CMakeLists.txt  CMakeLists.txt~  package.xml~
seds/include/: GMM.h  GMM.h~  GMR.h~
seds/src/: GMM.cpp  GMM.cpp~  GMR.cpp  GMR.cpp~
terminator/: config  config~
