<?xml version="1.0"?>
<package>
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <run_depend>iiwa_msgs</run_depend>
  <build_depend>seds</build_depend>
  <run_depend>seds</run_depend>
  <build_depend>mathlib</build_depend>
  <run_depend>mathlib</run_depend>  

  <run_depend>message_filters</run_depend>  
  <build_depend>message_filters</build_depend>
  <run_depend>geometry_msgs</run_depend>  
  <build_depend>geometry_msgs</build_depend>

</package>
